feat: modify article layout template component and update markdown blog content

--- a/src/content/blog/markdown-elements.mdx
+++ b/src/content/blog/markdown-elements.mdx
@@ -5,17 +5,14 @@ date: 2023-01-02T00:00:00Z
 pubDate: "Aug 02 2022"
 author: John Doe
 draft: false
-cover: {
-  src: "/images/blog/placeholder-5.jpg",
-  alt: "Lorem ipsum dolor sit amet",
-}
+cover: { src: "/images/blog/placeholder-5.jpg", alt: "Lorem ipsum dolor sit amet" }
 tags:
   - markdown
   - Astro
   - blog
 ---
 
-### Table of contents
+I got ✨a lot✨ of positive feedback from my Guide to creating animations that spark joy with Framer Motion, and it's undeniable that this library has piqued many developers' interests in the world of web-based animations.
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
